# catdex-api

./: Cargo.toml  README.md
src/: errors.rs  main.rs  model.rs
static/: cat.html  index.html
static/css/: index.css
